--- a/MyComplexApp/App.Web/Views/GeneralViews/_Menu.cshtml
+++ b/MyComplexApp/App.Web/Views/GeneralViews/_Menu.cshtml
@@ -9,9 +9,11 @@
         <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab"
            aria-controls="v-pills-profile" aria-selected="false">Profile</a>
         <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab"
-           aria-controls="v-pills-messages" aria-selected="false">Messages</a>
+           aria-controls="v-pills-messages" aria-selected="false">Comments</a>
         <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab"
            aria-controls="v-pills-settings" aria-selected="false">Settings</a>
+        <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-lesson" role="tab"
+           aria-controls="v-pills-settings" aria-selected="false">Lesson</a>
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout">
             <button id="logout" type="submit" class="nav-link btn btn-link text-dark"><span class="text-danger">Logout</span></button>
         </form>
