--- a/MyComplexApp/App.Web/Views/Admin/Index.cshtml
+++ b/MyComplexApp/App.Web/Views/Admin/Index.cshtml
@@ -11,6 +11,7 @@
                 @await Html.PartialAsync("_Monitoring", Model)
                 @await Html.PartialAsync("../GeneralViews/_Comments", Model.Data)
                 @await Html.PartialAsync("../GeneralViews/_Settings", Model.Data.PersonalData)
+                @await Html.PartialAsync("../GeneralViews/_Lesson", Model.Data.Marks.ThemeMarks)
             </div>
         </div>
     </div>
